--- a/app/index.html
+++ b/app/index.html
@@ -51,14 +51,13 @@
       </p>
 
       <ul class="slide2 tabs header animated dur06 blurred2">
-        <li id="button-approach" class="button button-approach"><a href>Approach</a></li>
-        <li id="button-tools" class="button button-tools"><a href>Tools</a></li>
-        <li id="button-work" class="button button-work"><a href>Work</a></li>
+        <li class="button button-approach"><a href>Approach</a></li>
+        <li class="button button-tools"><a href>Tools</a></li>
+        <li class="button button-work"><a href>Work</a></li>
       </ul>
 
-
       <div class="subject-wrapper">
-        <div id="approach" class="subject approach">
+        <div class="subject approach">
           <div class="topic">
             <div class="slide2 graphic">
               <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="0.48 0.48 23.04 23.04"
@@ -74,31 +73,27 @@
               <p class="slide2">Turning a challenge into something beautiful and functional excites me.</p>
 
               <p class="slide2">In the 90s, a web developer handled everything except running the server. If we could
-                manage
-                shared hosting, we were deemed webmasters.</p>
+                manage shared hosting, we were deemed webmasters.</p>
 
               <p class="slide2">Now still, a full-stack developer oversees all aspects except server management. I've
-                acquired
-                proficiency in DevOps, making me a contemporary Web Master.</p>
+                acquired proficiency in DevOps, making me a contemporary Web Master.</p>
 
               <p class="slide2">My journey has seen me play diverse roles, including that of a Scrum Master. However, my
-                true passion
-                lies in contributing to a small, dynamic team that transforms ideas into live productions.</p>
+                true passion lies in contributing to a small, dynamic team that transforms ideas into live productions.
+              </p>
 
               <p class="slide2">While my coding pace is deliberate, I excel in swift troubleshooting and consistently
-                deliver
-                solid results that prove highly effective.</p>
+                deliver solid results that prove highly effective.</p>
 
               <p class="slide2">Explore this portfolio showcasing recent solo projects. As we approach Spring 2024, I am
-                actively
-                seeking opportunities to join a team or serve a new client.</p>
+                actively seeking opportunities to join a team or serve a new client.</p>
 
             </div>
 
           </div>
         </div>
 
-        <div id="tools" class="subject tools">
+        <div class="subject tools">
           <div class="topic">
             <div class="slide2 graphic">
               <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="0 0 512 512" fill="#DDE6E8">
@@ -112,8 +107,8 @@
               <h2 class="title">Tools</h2>
             </div>
             <div class="copy">
-              <p class="slide2">Let's leverage the power of Artificial Intelligence and employ cutting-edge
-                technologies and tools to enhance and simplify projects. In these projects I use:</p>
+              <p class="slide2">Let's leverage the power of Artificial Intelligence and employ cutting-edge technologies
+                and tools to enhance and simplify projects. In these projects I use:</p>
 
               <ul>
                 <li>Frontend
@@ -194,11 +189,13 @@
 
         <div id="dummy" class="subject nothing active"></div>
 
-        <div id="work" class="subject work">
+        <div class="subject work">
           <div class="topic">
-            <div class="slide2 graphic">
-              <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="-3 -3 30 30" fill="#DDE6E8">
-                <path d=" M22.282 9.821a5.985 5.985 0 00-.516-4.91 6.046 6.046 0 00-6.51-2.9A6.065 6.065
+            <div class="portfolio-card">
+              <div class="slide2 graphic">
+                <svg class="image header animated blurred2 dur06" aria-hidden="true" viewBox="-3 -3 30 30"
+                  fill="#DDE6E8">
+                  <path d=" M22.282 9.821a5.985 5.985 0 00-.516-4.91 6.046 6.046 0 00-6.51-2.9A6.065 6.065
                 0 004.981 4.18a5.985 5.985 0 00-3.998 2.9 6.046 6.046 0 00.743 7.097 5.98 5.98 0 00.51 4.911 6.051 6.051
                 0 006.515 2.9A5.985 5.985 0 0013.26 24a6.056 6.056 0 005.772-4.206 5.99 5.99 0 003.997-2.9 6.056 6.056 0
                 00-.747-7.073zM13.26 22.43a4.476 4.476 0 01-2.876-1.04l.141-.081 4.779-2.758a.795.795 0
@@ -211,10 +208,14 @@
                 01.028-.061l4.83-2.787a4.5 4.5 0 016.68 4.66zm-12.64 4.135l-2.02-1.164a.08.08 0 01-.038-.057V6.075a4.5
                 4.5 0 017.375-3.453l-.142.08-4.778 2.758a.795.795 0 00-.393.681zm1.097-2.365l2.602-1.5 2.607
                 1.5v2.999l-2.597 1.5-2.607-1.5z"></path>
-              </svg>
-              <h2 class="slide2 title">Work</h2>
+                </svg>
+                <h2 class="slide2 title">Work</h2>
+              </div>
             </div>
-            <div class="topic">
+          </div>
+
+          <div class="topic">
+            <div class="portfolio-card">
               <div class="slide2 section graphic">
                 <a href="https://articl.net/">
                   <img class="screenshot"
@@ -239,7 +240,9 @@
                 </p>
               </div>
             </div>
-            <div class="topic">
+          </div>
+          <div class="topic">
+            <div class="portfolio-card">
               <div class="slide2 section graphic">
                 <a href="https://naturallyhued.com/">
                   <img class="screenshot"
@@ -254,10 +257,11 @@
                   edit the content and direct the AI in making revisions.</p>
               </div>
             </div>
+          </div>
 
 
-            <div class="topic">
-
+          <div class="topic">
+            <div class="portfolio-card">
               <h3>GreatClips AdTool</h3>
               https://github.com/erikmattheis/greatclipsadwordstool
               <p> The Google AD Campaign Generator for GreatClips franchise owners is an application designed to
@@ -312,9 +316,11 @@
                 The utilization of the Google Ads API and Node.js technologies ensures efficient campaign creation and
                 customization for optimal advertising outcomes.</p>
             </div>
+          </div>
 
 
-            <div class="topic">
+          <div class="topic">
+            <div class="portfolio-card">
               <h3>Articl Q&A - AngularJS</h3>
               <h4><em>Medical Research Directory</em></h4>
 
@@ -368,9 +374,10 @@
                 user-friendly and feature-rich application, emphasizing both frontend and backend aspects for a
                 comprehensive learning experience.</p>
             </div>
+          </div>
+          <div class="topic">
+            <div class="portfolio-card">
 
-            <div class="topic">
-              **Project Overview:**
 
               <h2>SlotMachine</h2>
               <h4><em>Video One-armed Bandite</em></h4>
@@ -418,9 +425,10 @@
                 features. The use of Vue 3 and associated tools highlights the evolution of Vue.js in building modern
                 web applications.</p>
             </div>
+          </div>
 
-            <div class="topic">
-
+          <div class="topic">
+            <div class="portfolio-card">
               <h3>Mongodb_s3_backup</h3>
               <h4><em>Custom DevOps Tool</em></h4>
               https://github.com/erikmattheis/MoveDocumentsToS3
@@ -467,10 +475,10 @@
             <p>This project showcases the ability to create a tailored solution for a specific migration scenario,
               integrating MongoDB, Amazon S3, and Node.js for an efficient backup process. The custom tool enhances
               the data management aspect of transitioning from shared hosting to AWS Cloud.</p>
-
           </div>
-          <div class="topic">
-
+        </div>
+        <div class="topic">
+          <div class="portfolio-card">
             https://github.com/erikmattheis/OpeningRangeBot/
 
             <h3>OpeningRangeBot</h3>
@@ -519,16 +527,15 @@
             </ul>
             <p>The project demonstrates proficiency in Node.js, asynchronous programming, data streaming, and
               integrates various tools to create a functional options trading bot.</p>
-
           </div>
+        </div>
 
 
 
-          <div class="topic">
-
+        <div class="topic">
+          <div class="portfolio-card">
             https://github.com/erikmattheis/ds-foundation
 
-            Project Description:
             <h3>DS-foundation</h3>
             <h4><em>Foundation CSS Framework</em></h4>
             <p class="description">The ds-cdn project facilitated GSN clients using the Foundation CSS Framework in
@@ -585,10 +592,12 @@
               Foundation CSS Framework, providing clients with an efficient solution for incorporating GSN
               functionalities.</p>
           </div>
+        </div>
 
-          <div class="topic">
+        <div class="topic">
+          <div class="portfolio-card">
             https://github.com/erikmattheis/wp-skeleton/tree/master/content/themes/gsn-theme-basic
-            Project Description:
+
             <h3>GSNBasic</h3>
             <h4><em>WordPress Theme</em></h4>
 
@@ -633,10 +642,12 @@
               <li>Git: Version control for managing the project.</li>
               <li>Deployment: Included deployment instructions for setting up and updating the theme.</li>
             </ul>
-
-
           </div>
-          <div class="topic">
+
+        </div>
+
+        <div class="topic">
+          <div class="portfolio-card">
             https://github.com/erikmattheis/gsncore
 
             <h3>GSN core</h3>
@@ -682,10 +693,11 @@
             <p>The project aimed to enhance the grocery shopping experience by combining digital coupons, meal
               planning, and online shopping features within a user-friendly web application.</p>
 
-
           </div>
+        </div>
 
-          <div class="topic">
+        <div class="topic">
+          <div class="portfolio-card">
             https://github.com/erikmattheis/gsn-api-client
             <h3>GSN API Client</h3>
             <h4><em>WordPress Plugin</em></h4>
@@ -720,9 +732,10 @@
 
             </ul>
           </div>
+        </div>
 
-          <div class="topic">
-
+        <div class="topic">
+          <div class="portfolio-card">
             <h3>EJM Add Search Form</h3>
             <h4><em>WordPress Plugin</em></h4>
 
@@ -757,9 +770,10 @@
                 dynamic manipulation of the search form.</li>
             </ul>
           </div>
+        </div>
 
-          <div class="topic">
-
+        <div class="topic">
+          <div class="portfolio-card">
             <h3>Cryptocurrency Dashboard</h3>
             <h4><em>Financial Market Arbitrage Tool</em></h4>
 
@@ -804,58 +818,59 @@
               <li>HTML/CSS/JavaScript: Crafting a user-friendly and responsive web interface for a sophisticated
                 user
                 experience.</li>
-              </ull>
+            </ul>
 
           </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          [Briefly describe the project in a concise and efficient manner.]
-
-          [and list key features]
-
-          [and list technologies and tools used]
-
         </div>
 
-        <div class="topic">
 
-          Custom Shopify Theme
 
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+        [Briefly describe the project in a concise and efficient manner.]
+
+        [and list key features]
+
+        [and list technologies and tools used]
+
+      </div>
+
+      <div class="topic">
+
+        Custom Shopify Theme
+
       </div>
     </div>
+  </div>
 
-    <div class="small graphic">
-      <svg class="header animated blurred2 dur04" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
-        fill="#DDE6E8">
-        <g>
-          <path
-            d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
-        </g>
-      </svg>
-    </div>
+  <div class="small graphic">
+    <svg class="header animated blurred2 dur04" xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" version="1.1" viewBox="0 0 706.1 706.1"
+      fill="#DDE6E8">
+      <g>
+        <path
+          d="M353.05 0c69.02,0 124.97,55.95 124.97,124.97 0,60.82 -43.88,112.89 -103.67,123.15l0 89.24 138.46 100.6c19.64,-12.85 43.11,-20.32 68.32,-20.32 69.02,0 124.97,55.96 124.97,124.97 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-28.16 9.31,-54.15 25.04,-75.05l-128.16 -93.11 -128.15 93.11c15.72,20.9 25.04,46.89 25.04,75.05 0,69.01 -55.95,124.97 -124.97,124.97 -69.01,0 -124.96,-55.96 -124.96,-124.97 0,-69.01 55.95,-124.97 124.96,-124.97 25.22,0 48.69,7.47 68.32,20.32l138.47 -100.6 0 -89.24c-59.8,-10.26 -103.67,-62.33 -103.67,-123.15 0,-69.02 55.95,-124.97 124.96,-124.97z" />
+      </g>
+    </svg>
+  </div>
 
-    <footer class="header animated dur06 blurred2" style="z-index:2">
+  <footer class="header animated dur06 blurred2" style="z-index:2">
 
-      <p class="slide2">Let's build something great togther.</p>
+    <p class="slide2">Let's build something great togther.</p>
 
-      <a class="slide2 mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
-      <div class="slide2">Saint Paul, MN</div>
-    </footer>
+    <a class="slide2 mail" href="mailto:erik@mattheis.org">erik@mattheis.org</a>
+    <div class="slide2">Saint Paul, MN</div>
+  </footer>
   </div>
   </div>
   </div>
