--- a/app/index.html
+++ b/app/index.html
@@ -480,14 +480,13 @@
 
             <div class="portfolio-card">
 
-              <h3>Articl Q&A - AngularJS</h3>
+              <h3>Articl Q&A</h3>
 
               <h4><em>Medical Study Tool</em></h4>
 
-              <p class="summary"> An application designed to provide medical students with multiple-choice quizzes for
-                studying purposes. Developed during the mentorship of UMN-Duluth CS majors, the project aimed to expose
-                students to real-world scenarios, encouraging the understanding and adaptation of code for educational
-                purposes.</p>
+              <p class="summary">Developed by two UMN-Duluth CS majors under my mentorship during a summer semester, the
+                focus was on highlighting distinctions between writing production-ready code efficiently and showcasing
+                competence in an academic setting.</p>
               <a class="github"
                  href="https://github.com/erikmattheis/articlmultiplechoicequestion">Github</a></p>
 
@@ -540,7 +539,7 @@
                 <li class="list-item checked">Credit System: Implements a credit system allowing users to spin the slot
                   machine with a starting credit balance that is partially replenished each day.</li>
                 <li class="list-item checked">Reel physics enhance the slot machine experience.</li>
-                < class="list-item checked">Incorporates sound effects and jingles I created in Logic Pro.</li>
+                <li class="list-item checked">Incorporates sound effects and jingles I created in Logic Pro.</li>
               </ul>
 
               <h4>Technologies and Tools</h4>
